--- a/Musiq/Views/Shared/_MusicPartial.cshtml
+++ b/Musiq/Views/Shared/_MusicPartial.cshtml
@@ -10,8 +10,8 @@
                 <th id="table-length" class="portrait-hide mobile-hide">Length</th>
             </tr>
         </thead>
-        <tbody>
-            <tr ng-repeat="song in songs" ng-show="([song] | filter:search).length > 0" data-songid="{{song.SongID}}" data-songlink="http://localhost:2275/Music/{{song.FilePath}}" data-song="{{song.SongTitle}}" data-artist="{{song.Artist}}" data-album="{{song.Album}}">
+        <tbody id="lucene-search">
+            <tr ng-repeat="song in songs" ng-show="([song] | filter:search).length > 0" data-songid="{{song.SongID}}" data-songlink="http://ucsbjukebox.info/Music/{{song.FilePath}}" data-song="{{song.SongTitle}}" data-artist="{{song.Artist}}" data-album="{{song.Album}}">
                 <td class="mobile-hide">
                     <button class="btn btn-musiq btn-sm queue-button pull-left" type="button" ng-click="addToQueue(song)">
                         <span class="glyphicon glyphicon-plus"></span>
