--- a/Musiq/Content/Site.css
+++ b/Musiq/Content/Site.css
@@ -9,7 +9,7 @@ padding-bottom: 20px;
 font-family: "HelveticaLight";
 font-weight: 300;
 position: absolute;
-left:320px;
+margin-left: 320px;
 -webkit-touch-callout: none;
 -webkit-user-select: none;
 -khtml-user-select: none;
@@ -68,7 +68,6 @@ input[type="checkbox"].input-validation-error {
 /* Profile */
 .musiq-container {
     margin-top: 30px;
-    min-width: 1280px;
 }
 .progress {
 height: 0px;
@@ -135,9 +134,9 @@ font-family: "HelveticaLight";
 font-size: 1.25em;
 color: white;
 }
-.sidr ul li a{
+/*.sidr ul li a{
     display:inline-block;
-}
+}*/
 
 .navbar-container{
     padding-right: 15px;
@@ -146,6 +145,12 @@ color: white;
 }
 .sidr-links {
     color: rgb(81, 199, 209);
+    text-decoration: none;
+}
+
+.sidr-sub {
+    display: block;
+    color: white;
     text-decoration: none;
 }
 
@@ -248,6 +253,10 @@ table {
     background-color: rgba(141, 141, 141, 0.16);
 }
 
+.text-wrap {
+    text-overflow:ellipsis;
+}
+
 /* Responsive Media Queries */
 .portrait-only {
     display: none;
@@ -262,6 +271,7 @@ input[type="button"],select{
     color:white;
     font-size:8em;
     text-decoration:none;
+    text-shadow: 0 2px 6px rgba(48, 48, 48, 0.7);
 }
 .col-centered{
     float: none;
@@ -350,8 +360,12 @@ margin: 0 auto;
     min-width: 215px;
 }
 #login_page{
-    background-color: rgb(207, 207, 207);
-    position:static;
+    /*background-color: rgb(207, 207, 207);*/
+      background: url(/Images/Background/storke-background.jpg) no-repeat center center fixed; 
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
 }
 a:hover{
     text-decoration:none;
@@ -372,7 +386,6 @@ a:hover{
 
 #content_loader {
     margin-left: 260px;
-    margin-top: 61px;
 }
 
 .uploader {
