--- a/Musiq/Views/Shared/_Layout.cshtml
+++ b/Musiq/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title urMusiQ</title>
+    <title>urMusiQ</title>
     @Styles.Render("~/Content/css")
     <link href='http://fonts.googleapis.com/css?family=Exo' rel='stylesheet' type='text/css'>
     @Scripts.Render("~/bundles/modernizr")
@@ -17,36 +17,38 @@
     <script src="~/Scripts/angular-local-storage.js"></script>
 </head>
 <body>
-
-    @if (User.Identity.IsAuthenticated)
-    { 
-        Account = (Musiq.ExtensionClasses.MusiqPrincipal) User;
-        <div id="sidr" class="sidr left" style="display: block;" ng-controller="SidebarController">
-            <ul class="text-center" style="margin-top:10px;">
-                <li><h1 class="logo-navbar text-center">urMusiQ</h1></li>
-                <li class="sidr-profile" style="display:-webkit-inline-box;"><img class="img-circle" style="width:55px; height:55px; margin-left:30px; margin-top:30px;" src="~/@Account.UserInformation.ProfilePicURL" /><h4 style="margin-top: 45px; margin-left: 15px; font-family: HelveticaLight; font-weight: 200; color: rgb(81, 199, 209);">@Account.UserInformation.FirstName</h4></li>
-                <li class="sidr-followers sidr-followers-nums" style="display:-webkit-inline-box;"><a href="#" class="sidr-links" style="margin-left:39px; font-size: 16px;">Following</a><a class="sidr-links" href="#" style="margin-left: 18px; font-size: 16px;">Followers</a></li>
-                <li><input class="nav-form-control margin-center" placeholder="Search"></li>
-                <li><a class="sidr-links" href="#"><span class="glyphicon glyphicon-list-alt sidr-icons"></span>Top Songs</a></li>
-                <li><a class="sidr-links" id="urProfile" href="#" ng-click="loadProfile();"><span class="glyphicon glyphicon-music sidr-icons"></span>urMusic</a></li>
-                <li><a class="sidr-links" id="urQueue" href="#" ng-click="loadQueue();"><span class="glyphicon glyphicon-headphones sidr-icons"></span>Queue</a></li>
-                <li><a class="sidr-links" href="#" ng-click="loadRemote();"><span class="glyphicon glyphicon-phone sidr-icons"></span>Remote</a></li>
-                <li><a ng-click="settings = ! settings" class="sidr-links" href="#"><span class="glyphicon glyphicon-cog sidr-icons"></span>Settings</a></li>
-                <li ng-show="settings">Manage</li>
-                <li ng-show="settings">Logout</li>
-                <li><audio controls="controls" id="audio" preload="auto" tabindex="0" class="center"></audio></li>
-            </ul>
-        </div>
-    }
-        <div class="container body-content">
+    <div ng-controller="MusiqController">
+        @if (User.Identity.IsAuthenticated)
+        {
+            Account = (Musiq.ExtensionClasses.MusiqPrincipal)User;
+            <div id="sidr" class="sidr left" style="display: block;">
+                <ul class="text-center" style="margin-top:10px;">
+                    <li><h1 class="logo-navbar text-center">urMusiQ</h1></li>
+                    <li class="sidr-profile" style="display:-webkit-inline-box;"><img class="img-circle" style="width:55px; height:55px; margin-left:30px; margin-top:30px;" src="~/@Account.UserInformation.ProfilePicURL" /><h4 style="margin-top: 45px; margin-left: 15px; font-family: HelveticaLight; font-weight: 200; color: rgb(81, 199, 209);">@Account.UserInformation.FirstName</h4></li>
+                    <li class="sidr-followers sidr-followers-nums" style="display:-webkit-inline-box;"><a href="#" class="sidr-links" style="margin-left:39px; font-size: 16px;">Following</a><a class="sidr-links" href="#" style="margin-left: 18px; font-size: 16px;">Followers</a></li>
+                    <li><input class="nav-form-control margin-center" placeholder="Search" id="full-search"></li>
+                    <li><a class="sidr-links" href="#"><span class="glyphicon glyphicon-list-alt sidr-icons"></span>Top Songs</a></li>
+                    <li><a class="sidr-links" id="urProfile" href="#" ng-click="loadProfile();"><span class="glyphicon glyphicon-music sidr-icons"></span>urMusic</a></li>
+                    <li><a class="sidr-links" id="urQueue" href="#" ng-click="loadQueue();"><span class="glyphicon glyphicon-headphones sidr-icons"></span>Queue</a></li>
+                    <li><a class="sidr-links" href="#" ng-click="loadRemote();"><span class="glyphicon glyphicon-phone sidr-icons"></span>Remote</a></li>
+                    <li>
+                        <a ng-click="settings = ! settings" class="sidr-links" href="#"><span class="glyphicon glyphicon-cog sidr-icons"></span>Settings</a>
+                        <a ng-show="settings" class="sidr-sub" href="~/logout">Logout</a>
+                        <a ng-show="settings" class="sidr-sub" href="#">Manage</a>
+                    </li>
+                    <li><audio controls="controls" id="audio" preload="auto" tabindex="0" class="center"></audio></li>
+                </ul>
+            </div>
+        }
+        <div class="body-content">
             @RenderBody()
         </div>
-
+    </div>
         @Scripts.Render("~/bundles/jquery")
         @Scripts.Render("~/bundles/bootstrap")
         @RenderSection("scripts", required: false)
         <script>
-            
+
             var toggle = false;
             var scrnwidth;
             var socket;
@@ -80,78 +82,69 @@
                 });
 
 
+
+
+
+
             });
 
         </script>
-    <script>
-        var musiqApp = angular.module('musiqApp', ['LocalStorageModule']);
+        <script>
+            var musiqApp = angular.module('musiqApp', []);
 
-        musiqApp.controller('MusiqController', ['$http', '$scope',
-            function ($http, $scope) {
-                $scope.songs = [];
-                $scope.songQueue = [];
-                $scope.profile = true;
-                $scope.queue = false;
-                $scope.remote = false;
-                $scope.login = true;
-                $http.get('/api/music/').success(function (data) {
-                    $scope.songs = data;
-                    console.log($scope.songs);
-                    $.getScript("../scripts/music/audioplayback.js").done(function (script, textStatus) {
-                    });
-                });
+            musiqApp.controller('MusiqController', ['$http', '$scope', '$timeout',
+                function ($http, $scope, $timeout) {
+                    $scope.songs = [];
+                    $scope.songQueue = [];
 
-                $scope.addToQueue = function (song) {
-                    $scope.songQueue.push(song);
-                    //localStorageService.add('queue', $scope.queue);
-                    //var queue = localStorageService.get('queue');
-                    //console.log(queue);
-                };
+                    $scope.settings = false;
 
-            }]);
-
-        musiqApp.controller('SidebarController', ['$http', '$scope',
-            function ($http, $scope) {
-                $scope.loading = false;
-                $scope.profile = true;
-                $scope.queue = false;
-                $scope.remote = false;
-                $scope.settings = false;
-
-                $scope.loadProfile = function () {
-                    $scope.loading = true;
-                    $scope.remote = false;
-                    $scope.queue = false;
+                    $scope.loading = false;
                     $scope.profile = true;
-                    $timeout(function () {
-                        $scope.loading = false;
-                    }, 2000);
-
-                };
-
-                $scope.loadRemote = function () {
-                    //$('#content_loader').show();
-                    //$scope.test = '<div class="row"><div class="col-lg-8 pull-left" style="padding:0px;"><input class="form-control" placeholder="Search" ng-model="search" style="width:100%"></div></div><div class="row" id="table"><table class="table table-hover" id="music-playlist"><thead><tr><th id="table-share" class="mobile-hide"></th><th id="table-song">Song Title</th><th id="table-artist" class="portrait-hide">Artist</th><th id="table-album" class="mobile-hide">Album</th><th id="table-genre">Genre</th><th id="table-length" class="portrait-hide">Length</th></tr></thead><tbody><tr ng-repeat="song in songs" ng-show="([song] | filter:search).length > 0" data-songid="{{song.SongID}}" data-songlink="http://www.ucsbjukebox.info/Music/{{song.FilePath}}" data-song="{{song.SongTitle}}" data-artist="{{song.Artist}}" data-album="{{song.Album}}"><td class="mobile-hide"><button class="btn btn-musiq btn-sm queue-button pull-left" type="button" ng-click="addToQueue(song)"><span class="glyphicon glyphicon-plus"></span></button></td><td><div class="text-wrap portrait-bold"><span class="song-span">{{song.SongTitle}}</span><input class="song-input" hidden/></div><div class="text-wrap portrait-only"><span>{{song.Artist}}</span></div></td><td class="portrait-hide"><div class="text-wrap"><span class="artist-span">{{song.Artist}}</span><input class="artist-input" hidden/></div></td><td class="mobile-hide"><div class="text-wrap"><span class="album-span">{{song.Album}}</span><input class="album-input" hidden/></div></td><td class="mobile-hide"><div class="text-wrap"><span class="album-span">{{song.Genre}}</span><input class="genre-input" hidden/></div></td><td class="portrait-hide"><div class="text-wrap"><span>{{song.Length}}</span><input hidden/></div></td></tr></tbody></table></div>';
-                    $scope.loading = true;
-                    $scope.profile = false;
                     $scope.queue = false;
-                    $scope.remote = true;
-                    $timeout(function () {
-                        $scope.loading = false;
-                    }, 2000);
-                };
-
-                $scope.loadQueue = function () {
-                    //$('#content_loader').show();
-                    //$scope.test = ' <table class="table table-hover" id="music-playlist"><thead><tr><th id="table-share" class="mobile-hide"></th><th id="table-song">Song Title</th><th id="table-artist" class="portrait-hide">Artist</th><th id="table-album" class="mobile-hide">Album</th><th id="table-genre">Genre</th><th id="table-length" class="portrait-hide">Length</th></tr></thead><tbody><tr ng-repeat="song in queue" ng-show="([song] | filter:search).length > 0" data-songid="{{song.SongID}}" data-songlink="http://www.ucsbjukebox.info/Music/{{song.FilePath}}" data-song="{{song.SongTitle}}" data-artist="{{song.Artist}}" data-album="{{song.Album}}"><td class="mobile-hide"><button class="btn btn-musiq btn-sm queue-button pull-left" type="button" ng-click="addToQueue(song)"><span class="glyphicon glyphicon-plus"></span></button></td><td><div class="text-wrap portrait-bold"><span class="song-span">{{song.SongTitle}}</span><input class="song-input" hidden/></div><div class="text-wrap portrait-only"><span>{{song.Artist}}</span></div></td><td class="portrait-hide"><div class="text-wrap"><span class="artist-span">{{song.Artist}}</span><input class="artist-input" hidden/></div></td><td class="mobile-hide"><div class="text-wrap"><span class="album-span">{{song.Album}}</span><input class="album-input" hidden/></div></td><td class="mobile-hide"><div class="text-wrap"><span class="album-span">{{song.Genre}}</span><input class="genre-input" hidden/></div></td><td class="portrait-hide"><div class="text-wrap"><span>{{song.Length}}</span><input hidden/></div></td></tr></tbody></table>';
-                    $scope.profile = false;
                     $scope.remote = false;
-                    $scope.queue = true;
 
-                };
+                    $scope.login = true;
+                    $http.get('/api/music/').success(function (data) {
+                        $scope.songs = data;
+                        console.log($scope.songs);
+                        $.getScript("../scripts/music/audioplayback.js").done(function (script, textStatus) {
+                        });
+                    });
 
-            }]);
-    </script>
+                    $scope.addToQueue = function (song) {
+                        $scope.songQueue.push(song);
+                    };
+
+                    $scope.loadProfile = function () {
+                        $scope.loading = true;
+                        $scope.remote = false;
+                        $scope.queue = false;
+                        $scope.profile = true;
+                        $timeout(function () {
+                            $scope.loading = false;
+                        }, 1000);
+
+                    };
+
+                    $scope.loadRemote = function () {
+                        $scope.loading = true;
+                        $scope.profile = false;
+                        $scope.queue = false;
+                        $scope.remote = true;
+                        $timeout(function () {
+                            $scope.loading = false;
+                        }, 2000);
+                    };
+
+                    $scope.loadQueue = function () {
+                        $scope.profile = false;
+                        $scope.remote = false;
+                        $scope.queue = true;
+                    };
+
+                }]);
+        </script>
 
 </body>
 
